# overlay_dx

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  src.models.rst
docs/_build/doctrees/: environment.pickle  index.doctree  src.doctree  src.models.doctree  src.processing_forecasts.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.models.html  src.processing_forecasts.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/models/: XGBoost.html  cnn.html  gru.html  lstm.html  sarima.html  var.html
docs/_build/html/_modules/processing_forecasts/: ensemble_learning.html  metrics.html  multi_objective_optimization.html
docs/_build/html/_sources/: index.rst.txt  src.processing_forecasts.rst.txt  src.rst.txt
notebooks/: systemresources-deeplearning-1000.csv  ts_forecaster_demo.ipynb
paper_experiments/: ETDataset.ipynb  README.md  discovery.ipynb  generate_fake_patterns.py  grid_search.py  main.py  metrics.py  regressors_config.py  train.py  utils.py
src/models/: XGBoost.py  cnn.py  gru.py  lstm.py  sarima.py  test.py  var.py
src/processing_forecasts/: ensemble_learning.py  metrics.py  multi_objective_optimization.py
